added user authentication
