# src/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/categories": {
             "post": {
-                "tags": ["category"],
+                "tags": ["Category"],
                 "summary": "Create a category",
                 "description": "Create a new category",
                 "requestBody": {
@@ -45,7 +45,7 @@
                 }
             },
             "get": {
-                "tags": ["category"],
+                "tags": ["Category"],
                 "summary": "List all categories",
                 "description": "List all categories",
                 "responses": {
@@ -70,6 +70,71 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import":{
+            "post":{
+                "tags": ["Category"],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data":{
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type":"string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                         }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags":["Specifications"],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema":{
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification already existis"
+                    }
+                }
+            }
+
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type":"string"
+                },
+                "description": {
+                    "type":"string"
                 }
             }
         }
